--- a/.bazelrc
+++ b/.bazelrc
@@ -276,7 +276,7 @@ build:dbg -c dbg
 build:dbg --cxxopt -DTF_LITE_DISABLE_X86_NEON
 # AWS SDK must be compiled in release mode. see: https://github.com/tensorflow/tensorflow/issues/37498
 build:dbg --copt -DDEBUG_BUILD
-build:dbg --copt -ggdb3
+#build:dbg --copt -ggdb3
 
 # Config to build TPU backend
 build:tpu --define=with_tpu_support=true
