--- a/.bazelrc
+++ b/.bazelrc
@@ -270,8 +270,8 @@ build:dbg -c dbg
 # https://github.com/tensorflow/tensorflow/issues/48919.
 # Users can still include debug info for a specific kernel, e.g. with:
 #     --config=dbg --per_file_copt=+tensorflow/core/kernels/identity_op.*@-g
-#build:dbg --per_file_copt=+.*,-tensorflow.*@-g0
-#build:dbg --per_file_copt=+tensorflow/core/kernels.*@-g0
+build:dbg --per_file_copt=+.*,-tensorflow.*@-g0
+build:dbg --per_file_copt=+tensorflow/core/kernels.*@-g0
 # for now, disable arm_neon. see: https://github.com/tensorflow/tensorflow/issues/33360
 build:dbg --cxxopt -DTF_LITE_DISABLE_X86_NEON
 # AWS SDK must be compiled in release mode. see: https://github.com/tensorflow/tensorflow/issues/37498
@@ -458,8 +458,8 @@ test:rbe --test_env=USER=anon
 # workers:
 build:rbe --remote_download_toplevel
 
-build:download_clang --action_env=CC=clang
-build:download_clang --action_env=CXX=clang++
+#build:download_clang --action_env=CC=clang
+#build:download_clang --action_env=CXX=clang++
 
 build:rbe_linux_base --config=rbe
 build:rbe_linux_base --action_env=PATH="/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin:/usr/local/go/bin"
