--- a/.bazelrc
+++ b/.bazelrc
@@ -333,6 +333,7 @@ build:linux --copt="-Werror=switch"
 # Required for building with clang
 #build:linux --copt="-Wno-error=unused-but-set-variable"
 build:linux --copt -fno-omit-frame-pointer
+#build:linux --linkopt=-Wl,--threads
 
 # On Windows, `__cplusplus` is wrongly defined without this switch
 # See https://devblogs.microsoft.com/cppblog/msvc-now-correctly-reports-__cplusplus/
