--- a/.bazelrc
+++ b/.bazelrc
@@ -271,7 +271,7 @@ build:dbg -c dbg
 # Users can still include debug info for a specific kernel, e.g. with:
 #     --config=dbg --per_file_copt=+tensorflow/core/kernels/identity_op.*@-g
 build:dbg --per_file_copt=+.*,-tensorflow.*@-g0
-#build:dbg --per_file_copt=+tensorflow/core/kernels.*@-g0
+build:dbg --per_file_copt=+tensorflow/core/kernels.*@-g0
 # for now, disable arm_neon. see: https://github.com/tensorflow/tensorflow/issues/33360
 build:dbg --cxxopt -DTF_LITE_DISABLE_X86_NEON
 # AWS SDK must be compiled in release mode. see: https://github.com/tensorflow/tensorflow/issues/37498
