--- a/.bazelrc
+++ b/.bazelrc
@@ -270,12 +270,15 @@ build:dbg -c dbg
 # https://github.com/tensorflow/tensorflow/issues/48919.
 # Users can still include debug info for a specific kernel, e.g. with:
 #     --config=dbg --per_file_copt=+tensorflow/core/kernels/identity_op.*@-g
-build:dbg --per_file_copt=+.*,-tensorflow.*@-g0
-build:dbg --per_file_copt=+tensorflow/core/kernels.*@-g0
+#build:dbg --per_file_copt=+.*,-tensorflow.*@-g0
+build:dbg --per_file_copt=+.*@-g0
+#build:dbg --per_file_copt=+tensorflow/core/kernels.*@-g0
+build:dbg --per_file_copt=+tensorflow/core/kernels.*@-g
 # for now, disable arm_neon. see: https://github.com/tensorflow/tensorflow/issues/33360
 build:dbg --cxxopt -DTF_LITE_DISABLE_X86_NEON
 # AWS SDK must be compiled in release mode. see: https://github.com/tensorflow/tensorflow/issues/37498
 build:dbg --copt -DDEBUG_BUILD
+build:dbg --copt -O0
 #build:dbg --copt -ggdb3
 
 # Config to build TPU backend
